--- a/Client/Application/src/app/tabs/tabs.page.scss
+++ b/Client/Application/src/app/tabs/tabs.page.scss
@@ -44,6 +44,17 @@
 
 }
 
+.back-btn {
+
+    margin: 16px;
+    --background: transparent;
+    --color: var(--ion-color-dark);
+    --box-shadow: none;
+    --background-activated-opacity: 0;
+    --background-focused-opacity: 0;
+
+}
+
 .block-container-active {
     
     padding: 0px 8px;
@@ -207,9 +218,10 @@ $primary-color: var(--ion-color-primary);
     width: 90%;
     padding: 24px;
     border-radius: 40px;
-    background-color: var(--ion-color-light);
+    background-color: transparent;
     position: fixed;
     top: 50%;
+    padding-bottom: 10%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
 
