Fixed some problems with injections🏁
1. N/A
2. 10
3. Fixed some minor issues

--- a/Client/Application/src/app/components/database/change/completion/completion.component.html
+++ b/Client/Application/src/app/components/database/change/completion/completion.component.html
@@ -175,7 +175,7 @@
 <ion-item *ngIf="field.type === 'date'">
     <ion-label class="label" position="floating">{{ 'choose_date' | translate }}</ion-label>
     <ion-datetime [ngModel]="data[field.key]"
-        (ionChange)="debug($event)" readonly></ion-datetime>
+        (ionChange)="updateDate($event)"></ion-datetime>
 </ion-item>
 
 <!-- Checkbox -->
