Fixed some more tiny bugs🏁
1. N/A
2. 10
3. Fixed some bugs to finalize the project

--- a/Client/Application/src/app/components/database/change/change.component.html
+++ b/Client/Application/src/app/components/database/change/change.component.html
@@ -146,7 +146,7 @@
                     <ion-col class="permissions"
                         *ngFor="let col of permissions?.columns; let i = index" size="3">
                         <mat-checkbox [disabled]="!modification_rule(this.data)"
-                            (ngModelChange)="debug(i, row, $event)"
+                            (ngModelChange)="updatePermissions(i, row, $event)"
                             [ngModel]="permissions.retrieve(data, row)[i]" class="example-margin">
                         </mat-checkbox>
                     </ion-col>
@@ -219,7 +219,8 @@
         </ng-container>
 
         <div style="display: flex; width: 100%; margin: 32px;">
-            <ion-button *ngIf="toggle" style="width: 300px;" class="cancel-btn" (click)="triggerToggle()"
+            <ion-button *ngIf="toggle" style="width: 300px;" class="cancel-btn"
+                (click)="triggerToggle()"
                 [ngClass]="!data[toggle.key] ? 'cancel-btn' : 'cancel-btn-dis'">{{data[toggle.key]
                 ? toggle.on_value :
                 toggle.off_value}}</ion-button>
@@ -232,7 +233,7 @@
                 [matTooltipClass]="'tooltip'" [matTooltipDisabled]="!fieldsCompleteness.length"
                 [matTooltip]="fieldsCompleteness.join('\n')">{{modification_mode ?
                 'Modify' : 'Add'}} {{data_type}}</ion-button>
-            <ion-button class="cancel-btn" color="tertiary" 
+            <ion-button class="cancel-btn" color="tertiary"
                 *ngIf="modification_mode && modification_rule && modification_rule(this.data)"
                 (click)="delete()">{{'Delete' | translate}} {{data_type}}</ion-button>
 
