Added some last minutes fixes🏁
1. N/A
2. 10
3. Added some quick fixes

--- a/Client/Website/src/app/components/general/footer/footer.component.html
+++ b/Client/Website/src/app/components/general/footer/footer.component.html
@@ -47,9 +47,10 @@
                                     [style.backgroundColor]="main_color" class="content-5"
                                     placeholder="Email Address"></b>
                         </div>
-                        <p [style.color]="main_color" class="content-4">
+                        <a href="mailto:team9.byblos@gmail.com" [style.color]="main_color"
+                            class="content-4">
                             <b>{{ "ok" | translate }}</b>
-                        </p>
+                        </a>
                     </div>
 
                 </td>
