--- a/Client/Website/src/app/components/general/footer/footer.component.html
+++ b/Client/Website/src/app/components/general/footer/footer.component.html
@@ -21,7 +21,7 @@
                         <p (click)="display_dialog.openDialog('about_us', 'about_us')"
                             [style.color]="font_color" class="content-1">{{ "about_us" | translate}}
                         </p>
-                        <p (click)="display_dialog.openDialog('terms', 'terms_conditions')"
+                        <p (click)="display_dialog.openDialog('terms_conditions', 'terms_conditions')"
                             [style.color]="font_color" class="content-1">{{ "terms_conditions" |
                             translate}}</p>
                     </div>
