--- a/Client/Website/src/app/services/dialogs/authentication/forgot-password/forgot-password.component.html
+++ b/Client/Website/src/app/services/dialogs/authentication/forgot-password/forgot-password.component.html
@@ -27,11 +27,11 @@
 
     <mat-form-field class="full-width input">
         <mat-label class="label">{{'password'|translate}}</mat-label>
-        <input [(ngModel)]="password" matInput>
+        <input type="password" [(ngModel)]="password" matInput>
     </mat-form-field>
     <mat-form-field class="full-width input">
         <mat-label class="label">{{'confirm_password'|translate}}</mat-label>
-        <input [(ngModel)]="confirm_password" matInput>
+        <input type="password" [(ngModel)]="confirm_password" matInput>
     </mat-form-field>
     <a class="forgot-pass" (click)="goToLogin()">
         {{'login'|translate}}?
