--- a/Client/Application/src/app/pages/settings/settings.component.html
+++ b/Client/Application/src/app/pages/settings/settings.component.html
@@ -66,11 +66,10 @@
 
 
     <hr style="border-bottom: 1px solid var(--ion-color-dark); width: 90%;">
-    <ion-item (click)="openModal(getEntry('terms'))" style="display: flex; flex-direction: column;font-family: 'Roboto';">
+    <ion-item (click)="openModal(getEntry('terms_conditions'))" style="display: flex; flex-direction: column;font-family: 'Roboto';">
       <ion-icon name="document-text" slot="start" style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
       <div>
-        <ion-text style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">Terms of
-          Service</ion-text>
+        <ion-text style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">{{ 'terms_conditions' | translate }}</ion-text>
         <p style="font-size: 14px;color: var(--ion-color-dark);">View and agree to the app's terms
           of service and privacy policy.</p>
       </div>
@@ -82,7 +81,7 @@
       <ion-icon name="information-circle" slot="start"
         style="font-size: 24px; color: var(--ion-color-primary);"></ion-icon>
       <div style="display: flex; flex-direction: column; justify-content: center; margin-left: 10px;">
-        <ion-text style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">About</ion-text>
+        <ion-text style="font-weight: 700; font-size: 18px;; color: var(--ion-color-dark);">{{ 'about_us' | translate }}</ion-text>
         <p style="font-size: 14px;color: var(--ion-color-dark);">Learn more about the app,
           including version number and developer information.</p>
       </div>
